# dot-claude

./: .envrc  .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  brew-formulas.txt  main.py  marketplace.json  mcp.json  pyproject.toml  release-please-config.json
.claude/: dev-workflow-state.json  settings.json  statusline.sh  trajectory.jsonl
.claude-plugin/: marketplace.json
.claude/agents/: agent-dotclaude-architect.md  agent-dotclaude-config-reviewer.md  dotclaude-agent-eval.md  dotclaude-architect.md  dotclaude-command-eval.md  dotclaude-config-reviewer.md  dotclaude-plugin-automation.md
.claude/commands/: claude_doctor.md  sync-claude-config.md
.claude/references/: askuserquestion-schema.md
.serena/: project.yml
docs/: ARCHITECTURE.md  CI-CD.md  GETTING-STARTED.md  MIGRATION.md  PLUGINS.md  multi-agent-workflow.mermaid
domain_plugins/: dev-seo.skill
openspec/: project.md
plugins/: README.md
scripts/: __init__.py  fix-plugin-references.py  generate-marketplace.sh  install.sh  level-1-syntax.sh  level-2-frontmatter.sh  level-3-disciplines.sh  level-4-arguments.sh  level-5-file-refs.sh  level-6-bash.sh  level-7-integration.sh  migrate_plugin_structure.py  sync-versions.sh  test_update_release_config.py  update-release-config.py  update_release_config.py  validate-all.sh  validate-plugins.py  validate-plugins.sh  validate-references.py  validate-settings.py
scripts/lib/: common.sh  (+1 more)
tests/: conftest.py  test_fix_plugin_references.py  test_plugin_structure.py  test_settings_validation.py
(+1387 files in other folders)
