[project]
name = "dot-claude"
version = "0.1.0"
description = "Claude Code plugins for productivity workflows - skills, agents, commands, and hooks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Pedro Proenca", email = "pedro@10xengs.com" }]
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["dot_claude"]

[tool.ty.environment]
python-version = "3.12"
